Added CSS, forgot to in last commit.

--- a/templates/firmware_update_v2/index.html
+++ b/templates/firmware_update_v2/index.html
@@ -2,59 +2,9 @@
 <html>
 <head>
   <title>IP Camera Firmware Upload</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      margin: 0;
-      padding: 20px;
-    }
-
-    h2 {
-      color: #333;
-    }
-
-    form {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    label {
-      display: inline-block;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-
-    select,
-    input[type="file"] {
-      width: 100%;
-      padding: 10px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-      margin-bottom: 20px;
-    }
-
-    input[type="submit"] {
-      background-color: #4CAF50;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    input[type="submit"]:hover {
-      background-color: #45a049;
-    }
-  </style>
+  <link rel="stylesheet" href="uploadscreen.css">
 </head>
+
 <body>
   <h2>IP Camera Firmware Upload</h2>
 
